Gtk3: fix titlebar buttons and nemo disk-size bg (#16)
- Fix overlapped close, min and max buttons
- Fix disk full background in nemo treeview for light theme
- Fully rebase with mint's Gtk3 theme

--- a/src/Mint-Y/gtk-3.0/sass/tweak-apps/_tweak-applications.scss
+++ b/src/Mint-Y/gtk-3.0/sass/tweak-apps/_tweak-applications.scss
@@ -19,6 +19,21 @@ vte-terminal {
 }
 
 //
+// Nautilus
+//
+.nautilus-window,
+filechooser {
+
+  placessidebar.sidebar list {
+
+    row.sidebar-row {
+      border: 20px;
+      border-radius: 99px;
+    }
+  }
+}
+
+//
 // Caja
 //
 
